Add pygame implementation with simple 3-node map

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 # Основные зависимости для MVP
 matplotlib>=3.5.0
 numpy>=1.21.0
-
-# Для будущей разработки (опционально)
-# pygame>=2.1.0  # Для игровой визуализации
-# pyglet>=2.0.0  # Альтернатива pygame
+pygame>=2.5.0  # Для игровой визуализации
