Remove all map/game code, start fresh

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Основные зависимости для MVP
-matplotlib>=3.5.0
-numpy>=1.21.0
-pygame>=2.5.0  # Для игровой визуализации
+# Зависимости для будущего кода (runtime удалён, будет добавляться заново)
+# pygame>=2.5.0
+# matplotlib>=3.5.0
+# numpy>=1.21.0
